--- a/app/15custservice/user/registercount.html
+++ b/app/15custservice/user/registercount.html
@@ -4,7 +4,7 @@
     <thead>
       <tr>
         <th class="text-center">注册人数</th>
-        <th class="text-center">激活人数</th>
+        <th class="text-center">实名人数</th>
         <th class="text-center">新卡激活人数</th>
         <th class="text-center">所有激活人数</th>
         <th class="text-center">商家录入人数</th>
