--- a/app/15custservice/user/activecode.html
+++ b/app/15custservice/user/activecode.html
@@ -1,46 +1,33 @@
-<div class="col-md-12 table-responsive">
-	<div class="col-md-12">
+<div class="col-md-12  panel">
+	<div class="col-md-12 panel-body">
 			<br>
-			<div class="col-md-2"></div>
-			<input type="text" style="border: 1px solid #ccc;" ng-model="mobile" placeholder="请输入电话号码">
-	        <button type="button" class="btn btn-primary btn-xs" ng-click="search_activecode(mobile)">
-	          搜索
-	        </button>
-	      	
+			<div class="col-md-2">
+				<input type="text" class="form-control" ng-model="mobile" placeholder="请输入电话号码"/>
+			</div>
+			<div class="col-md-1">
+				<button type="button" class="btn btn-primary" ng-click="search_activecode(mobile)">
+					搜索
+				</button>
+			</div>
+					
 	</div>
-	<br>
-  	<div class="col-md-12"></div>
-  	<br>
-  	<br>
-  	<div class="col-md-12">
-  		<h3 class="col-md-12">
-  			信息
-  		</h3>
-  		<br>
-  		<table class="table-bordered col-md-6">
-  			<tr>
-  				<td>
-  					激活码
-  				</td>
-  				<td>
-  					是否删除
-  				</td>
-  				<td>
-  					是否有效
-  				</td>
-  			</tr>
-  			<tr>
-  				<td>
-  					{{activecode_info}}
-  				</td>
-  				<td>
-  					{{status}}
-  				</td>
-  				<td>
-  					{{delflag}}
-  				</td>
-  			</tr>
-  		</table>
-  	</div>
+	<div class="col-md-4 ">
+		<table class="table table-bordered  col-md-12" ng-show="objs.length > 0">
+		    <thead>
+		      	<tr>
+			        <th class="text-center">激活码</th>
+			        <th class="text-center">是否删除</th>
+			        <th class="text-center">是否有效</th>
+		      	</tr>
+		    </thead>
+		    <tbody>
+		      	<tr ng-repeat="obj in objs">
+			        <td class="text-center">{{obj.activecode}}</td>
+			        <td class="text-center">{{obj.delfl}}</td>
+			        <td class="text-center">{{obj.state}}</td>
+		      	</tr>
+		    </tbody>
+	  	</table>
+	</div>
 
 </div>
