--- a/app/15custservice/user/infoticket.html
+++ b/app/15custservice/user/infoticket.html
@@ -15,11 +15,16 @@
   <table class="table table-bordered">
     <thead>
       <tr>
-        <th class="col-md-2 text-center">订单编号</th>
-        <th class="col-md-2 text-center">票码</th>
-        <th class="col-md-3 text-center">票种名称</th>
-        <th class="col-md-2 text-center">使用状态</th>
-        <th class="col-md-2 text-center">出票时间</th>
+        <th class="col-md-1 text-center">订单编号</th>
+        <th class="col-md-1 text-center">票码</th>
+        <th class="col-md-1 text-center">票种名称</th>
+        <th class="col-md-1 text-center">使用状态</th>
+        <th class="col-md-1 text-center">是否可退票</th>
+        <th class="col-md-1 text-center">开园时间</th>
+        <th class="col-md-1 text-center">预订须知</th>
+        <th class="col-md-1 text-center">产品介绍</th>
+        <th class="col-md-1 text-center">购票须知</th>
+        <th class="col-md-1 text-center">出票时间</th>
         <th class="col-md-1 text-center">操作</th>
       </tr>
     </thead>
@@ -29,6 +34,11 @@
         <td class="text-center">{{obj.code}}</td>
         <td class="">{{obj.type_name}}</td>
         <td class="text-center">{{obj.usedname}}</td>
+        <td class="text-center">{{obj.back_type}}</td>
+        <td class="text-center">{{obj.open_date}}</td>
+        <td class="text-center">{{obj.book_info}}</td>
+        <td class="text-center">{{obj.detail}}</td>
+        <td class="text-center">{{obj.bookingnotes}}</td>
         <td class="text-center">{{obj.ticket_out_time}}</td>
         <td class="text-center">
         	<a ng-show="obj.used == '0'" ng-click="destory(obj.code)" class="btn btn-success btn-xs">销票</a>
