--- a/app/15custservice/user/ticketInfo.html
+++ b/app/15custservice/user/ticketInfo.html
@@ -6,74 +6,109 @@
 <div class="modal-body">
 
     <div class="container-fluid form-horizontal ">
-        <div class="col-xs-6">
+        <div class="col-xs-12">
         <div class="form-group">
-            <label class="col-xs-6 control-label">景区全名</label>
+            <label class="col-xs-3 control-label">景区全名</label>
             <div class="col-xs-6">
                 <p class="form-control-static">{{obj.name}}</p>
             </div>
         </div>
 
         <div class="form-group">
-            <label class="col-xs-6 control-label">景区电话</label>
+            <label class="col-xs-3 control-label">景区电话</label>
             <div class="col-xs-6">
                 <p class="form-control-static">{{obj.mobile}}</p>
             </div>
         </div>
 
         <div class="form-group">
-            <label class="col-xs-6 control-label">景区地址</label>
+            <label class="col-xs-3 control-label">景区地址</label>
             <div class="col-xs-6">
                 <p class="form-control-static">{{obj.address}}</p>
             </div>
         </div>
 
         <div class="form-group">
-            <label class="col-xs-6 control-label">景区营业时间</label>
+            <label class="col-xs-3 control-label">景区营业时间</label>
             <div class="col-xs-6">
                 <p class="form-control-static">{{obj.open_time}}</p>
             </div>
         </div>
 
         <div class="form-group">
-            <label class="col-xs-6 control-label">有效期始</label>
+            <label class="col-xs-3 control-label">有效期始</label>
             <div class="col-xs-6">
                 <p class="form-control-static">{{obj.start_date}}</p>
             </div>
         </div>
 
         <div class="form-group">
-            <label class="col-xs-6 control-label">有效期至</label>
+            <label class="col-xs-3 control-label">有效期至</label>
             <div class="col-xs-6">
                 <p class="form-control-static">{{obj.end_date}}</p>
             </div>
         </div>
 
         <div class="form-group">
-            <label class="col-xs-6 control-label">订单总金额</label>
+            <label class="col-xs-3 control-label">订单总金额</label>
             <div class="col-xs-6">
                 <p class="form-control-static">{{obj.pay_fee}}</p>
             </div>
         </div>
 
         <div class="form-group">
-            <label class="col-xs-6 control-label">订单信息-购票数量</label>
+            <label class="col-xs-3 control-label">订单信息-购票数量</label>
             <div class="col-xs-6">
                 <p class="form-control-static">{{obj.num}}</p>
             </div>
         </div>
 
         <div class="form-group">
-            <label class="col-xs-6 control-label">下单时间</label>
+            <label class="col-xs-3 control-label">下单时间</label>
             <div class="col-xs-6">
                 <p class="form-control-static">{{obj.create_time}}</p>
             </div>
         </div>
 
         <div class="form-group">
-            <label class="col-xs-6 control-label">支付时间</label>
+            <label class="col-xs-3 control-label">支付时间</label>
             <div class="col-xs-6">
                 <p class="form-control-static">{{obj.pay_time}}</p>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="col-xs-3 control-label">是否可退票</label>
+            <div class="col-xs-6">
+                <p class="form-control-static">{{obj.back_type}}</p>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="col-xs-3 control-label">开园时间</label>
+            <div class="col-xs-6">
+                <p class="form-control-static">{{obj.open_date}}</p>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="col-xs-3 control-label">预订须知</label>
+            <div class="col-xs-9">
+                <p class="form-control-static">{{obj.book_info}}</p>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="col-xs-3 control-label">产品介绍</label>
+            <div class="col-xs-9">
+                <p class="form-control-static">{{obj.detail}}</p>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="col-xs-3 control-label">购票须知</label>
+            <div class="col-xs-9">
+                <p class="form-control-static">{{obj.bookingnotes}}</p>
             </div>
         </div>
 <!--
