--- a/app/15custservice/user/ticketInfo.html
+++ b/app/15custservice/user/ticketInfo.html
@@ -94,21 +94,21 @@
         <div class="form-group">
             <label class="col-xs-3 control-label">预订须知</label>
             <div class="col-xs-9">
-                <p text-angular class="form-control-static" ng-model="obj.book_info"></p>
+                <p class="form-control-static" ng-bind-html="obj.book_info"></p>
             </div>
         </div>
 
         <div class="form-group">
             <label class="col-xs-3 control-label">产品介绍</label>
             <div class="col-xs-9">
-                <p text-angular class="form-control-static" ng-model="obj.detail"></p>
+                <p class="form-control-static" ng-bind-html="obj.detail"></p>
             </div>
         </div>
 
         <div class="form-group">
             <label class="col-xs-3 control-label">购票须知</label>
             <div class="col-xs-9">
-                <p text-angular class="form-control-static" ng-model="obj.bookingnotes"></p>
+                <p class="form-control-static" ng-bind-html="obj.bookingnotes"></p>
             </div>
         </div>
 <!--
