--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
   <script src="node_modules/jquery/dist/jquery.min.js"></script>
   <script src="http://localhost:8080/webpack-dev-server.js"></script>
   <script src="http://localhost:8080/bundle.js"></script>
+  <!-- 编辑器配置文件 -->
+    <script type="text/javascript" src="ueditor/ueditor.config.js"></script>
+<!-- 编辑器核心配置文件 -->    
+    <script type="text/javascript" src="ueditor/ueditor.all.js"></script>
 
 
 </body>
