--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>居游</title>
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css" >
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" >
-    
+
   </head>
   <!-- <body ng-app="juyouApp"> -->
   <body>
@@ -24,6 +24,10 @@
     <script type="text/javascript" src="ueditor/ueditor.config.js"></script>
 <!-- 编辑器核心配置文件 -->    
     <script type="text/javascript" src="ueditor/ueditor.all.js"></script>
+
+     <!-- 引用ui-select -->
+  <!-- require('ui-select');
+  require('../node_modules/ui-select/dist/select.min.css'); -->
 
 
 </body>
