添加轮播图加分类选项

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<div ui-view></div>
 
 
-  <script src="node_modules/jquery/dist/jquery.min.js"></script>
+  <!--<script src="node_modules/jquery/dist/jquery.min.js"></script>-->
   <script src="http://localhost:8080/webpack-dev-server.js"></script>
   <script src="http://localhost:8080/bundle.js"></script>
   <!-- 编辑器配置文件 -->
