客服退款搜索条件订单来源shangke

--- a/app/15custservice/user/orderbacklist.html
+++ b/app/15custservice/user/orderbacklist.html
@@ -13,7 +13,7 @@
                   <!--ng-options="payment_type.value as payment_type.label for payment_type in payment_typearr"-->
                 
                   <option value="">  -- 不限 --  </option>
-                  <option value="shangke">  -- 商客 --  </option>
+                  <option value="shangke">shangke</option>
                 </select>
                 &nbsp;&nbsp;&nbsp;&nbsp;
 
