--- a/app/15custservice/user/orderback.html
+++ b/app/15custservice/user/orderback.html
@@ -4,7 +4,7 @@
 </div>
 <div class="modal-body">
 
-<div class="container-fluid">
+<div class="container-fluid form-horizontal">
     
     <div class="form-group" >
    	    <label class="col-xs-1 control-label"></label>
@@ -13,6 +13,19 @@
             <input type="number" class="form-control" ng-model="obj.back_price">
         </div>
     </div>
+     <div class="form-group">
+   	    <label class="col-xs-1 control-label"></label>
+        <label class="col-xs-2 control-label">退款说明</label>
+        <div class="col-xs-6">
+            <textarea cols="30" rows="7" class="form-control" ng-model="obj.remark" placeholder="退款说明"></textarea>
+        </div>
+    </div>
+    <!--<div class="form-group" >
+        <label class="col-xs-2 control-label">退款说明</label>
+        <div class="col-xs-6" >
+            <textarea cols="30" rows="6" class="form-control" ng-model="obj.remark"></textarea>
+        </div>
+    </div>-->
     
 </div>
 </div>
