--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
   <!--<script src="node_modules/jquery/dist/jquery.min.js"></script>-->
 
-  <script src="http://cl.juyouhx.com/Public/ueditor/ueditor.config.js"></script>
-  <script src="http://cl.juyouhx.com/Public/ueditor/ueditor.all.js"></script>
+  <script src="http://ts.juyouhx.com/ueditor/ueditor.config.js"></script>
+  <script src="http://ts.juyouhx.com/ueditor/ueditor.all.js"></script>
 
   <script src="http://localhost:8080/webpack-dev-server.js"></script>
   <script src="http://localhost:8080/bundle.js"></script>
