--- a/app/15custservice/user/editcardA.html
+++ b/app/15custservice/user/editcardA.html
@@ -10,7 +10,7 @@
    	    <label class="col-xs-1 control-label"></label>
         <label class="col-xs-2 control-label">新卡密</label>
         <div class="col-xs-6" >
-            <input class="form-control" ng-model="obj.cardpass">
+            <input class="form-control" ng-model="obj.card_password">
         </div>
     </div>
     
