'修改客服查询用户信息'

--- a/app/15custservice/user/userinfo.html
+++ b/app/15custservice/user/userinfo.html
@@ -4,7 +4,7 @@
     <div class="panel-body">
         <div class="form-group form-inline">
             <div class="col-sm-10">
-                <input type="text" class="form-control" ng-model="searchform.para" placeholder="请输入手机号或身份证号" style="width:200px;">
+                <input type="text" class="form-control" ng-model="searchform.para" placeholder="请输入手机号或身份证号或卡号" style="width:250px;">
                 &nbsp;&nbsp;&nbsp;&nbsp;
                 <button type="button" class="btn btn-default search" ng-click="load()">立即搜索</button>
             </div>
