--- a/app/15custservice/user/userinfo.html
+++ b/app/15custservice/user/userinfo.html
@@ -14,9 +14,9 @@
                 &nbsp;&nbsp;&nbsp;&nbsp;
                 <button type="button" class="btn btn-default search" ng-click="load()">立即搜索</button>
             </div>
-            <!--<div class="col-sm-2 text-right">
-                <button type="button" class="btn btn-info new" ng-click="create()">实名认证</button>
-            </div>-->
+            <div class="col-sm-2 text-right">
+                <button type="button" class="btn btn-info new" ng-click="create()">注册实名</button>
+            </div>
         </div>
     </div>
 </div><!-- searchArea -->
