--- a/app/15custservice/user/createuserinfo.html
+++ b/app/15custservice/user/createuserinfo.html
@@ -1,19 +1,19 @@
 <div class="col-xs-10 col-xs-offset-1 form-horizontal" >
-	
-	<div class="form-group">
-		<label class="col-xs-2 control-label">用户名</label>
-		<div class="col-xs-6">
-			<input type="text" class="form-control" placeholder="请输入用户名"
-			ng-model="objt.username"
-			>
-		</div>
-	</div>
 
 	<div class="form-group">
 		<label class="col-xs-2 control-label">手机号</label>
 		<div class="col-xs-6">
 			<input type="text" class="form-control" placeholder="请输入手机号"
 			ng-model="objt.mobile"
+			>
+		</div>
+	</div>
+	
+	<div class="form-group">
+		<label class="col-xs-2 control-label">姓名</label>
+		<div class="col-xs-6">
+			<input type="text" class="form-control" placeholder="请输入姓名"
+			ng-model="objt.username"
 			>
 		</div>
 	</div>
@@ -41,7 +41,7 @@
     class="btn btn-primary btn-lg btn-block" 
     ng-click="gogo()"
     >
-    实名认证
+    注册实名
     </button><br>
 
 
