--- a/app/15custservice/user/createuserinfo.html
+++ b/app/15custservice/user/createuserinfo.html
@@ -36,6 +36,11 @@
 		</div>
 	</div>
 
+	<div class="form-group" style="color:red;">
+		<label class="col-xs-2 control-label">注：</label>
+		<label class="col-xs-6 control-label">密码生成规则【手机号后2位＋身份证号后4位】</label>
+	</div>
+
 	<button 
     type="button" 
     class="btn btn-primary btn-lg btn-block" 
