'查询用户信息'

--- a/app/15custservice/user/registercount.html
+++ b/app/15custservice/user/registercount.html
@@ -5,18 +5,18 @@
       <tr>
         <th class="text-center">注册人数</th>
         <th class="text-center">实名人数</th>
-        <th class="text-center">新卡激活人数</th>
-        <th class="text-center">所有激活人数</th>
-        <th class="text-center">商家录入人数</th>
+        <!--<th class="text-center">新卡激活人数</th>-->
+        <th class="text-center">激活人数</th>
+        <!--<th class="text-center">商家录入人数</th>-->
       </tr>
     </thead>
     <tbody>
       <tr>
         <td class="text-center">{{obj.countUser}}</td>
         <td class="text-center">{{obj.countauth}}</td>
-        <td class="text-center">{{obj.countSecActive}}</td>
+        <!--<td class="text-center">{{obj.countSecActive}}</td>-->
         <td class="text-center">{{obj.countAllActive}}</td>
-        <td class="text-center">{{obj.countInData}}</td>
+        <!--<td class="text-center">{{obj.countInData}}</td>-->
       </tr>
     </tbody>
   </table>
