--- a/app/15custservice/user/openlottery.html
+++ b/app/15custservice/user/openlottery.html
@@ -1,4 +1,6 @@
-<form class="form-horizontal" role="form">
+
+
+<form class="form-horizontal" role="form" style="margin-top:40px">
   <div class="form-group">
     <label for="inputLottry" class="col-sm-2 control-label">开奖号码</label>
     <div class="col-md-4">
