--- a/app/98test/testProductList.html
+++ b/app/98test/testProductList.html
@@ -4,7 +4,7 @@
 			<div class="form-group form-inline">
 				<div class="col-sm-12">
 					<div class="row mt10">
-						<input type="text" class="form-control" ng-keyup="myKeyup($event)" ng-model="searchform.code" placeholder="设备吗">						&nbsp;&nbsp;&nbsp;&nbsp;
+						<input type="text" class="form-control" ng-keyup="myKeyup($event)" ng-model="searchform.code" placeholder="设备码">						&nbsp;&nbsp;&nbsp;&nbsp;
 						<input type="text" class="form-control" ng-keyup="myKeyup($event)" ng-model="searchform.sale_category" placeholder="销售品分类码">						&nbsp;&nbsp;&nbsp;&nbsp;
 					</div>
 					<!--<div class="row ">
