--- a/app/15custservice/user/ticketInfo.html
+++ b/app/15custservice/user/ticketInfo.html
@@ -78,6 +78,13 @@
         </div>
 
         <div class="form-group">
+            <label class="col-xs-3 control-label">出游日期</label>
+            <div class="col-xs-6">
+                <p class="form-control-static">{{obj.tour_date}}</p>
+            </div>
+        </div>
+
+        <div class="form-group">
             <label class="col-xs-3 control-label">是否可退票</label>
             <div class="col-xs-6">
                 <p class="form-control-static">{{obj.back_type}}</p>
