--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- <body ng-app="juyouApp"> -->
   <body>
     <!--弹出框-->
-    <toaster-container toaster-options="{'close-button':false, 'time-out':{ 'toast-success': 2500, 'toast-warning': 3000, 'toast-error': 2500 } }"></toaster-container>
+    <toaster-container toaster-options="{'close-button':false, 'time-out':{ 'toast-success': 2500, 'toast-info': 3000, 'toast-warning': 3000, 'toast-error': 2500 } }"></toaster-container>
 	<div ui-view></div>
 
 
